[tool.poetry]
name = "webhooktemplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
requests = "^2.28.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
# testing
pytest = "7.2.2"
coverage = "7.2.2"

# code analysis
autopep8 = "2.0.2"
flake8 = "6.0.0"